--- a/jdbc2-select/.project
+++ b/jdbc2-select/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jdbc1-conexao</name>
+	<name>jdbc2-select</name>
 	<comment></comment>
 	<projects>
 	</projects>
