--- a/jdbc5-delete/.project
+++ b/jdbc5-delete/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jdbc1-conexao</name>
+	<name>jdbc5-delete</name>
 	<comment></comment>
 	<projects>
 	</projects>
