--- a/jdbc6-commit/.project
+++ b/jdbc6-commit/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jdbc1-conexao</name>
+	<name>jdbc6-commit</name>
 	<comment></comment>
 	<projects>
 	</projects>
